trying to fix batch append